@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/PRIOR_FUNCTIONS.R
+% Please edit documentation in R/sup_funs.R
 \name{as_matrix}
 \alias{as_matrix}
 \title{Rcpp version's as.matrix}
